@@ -1,33 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX jinja-2.6-python3.3.patch 591 SHA256 38a97d3ffc527d9d12dcb6e103b8a214b95d8d554995f095532915e514ef5251 SHA512 430dcb663bc623c639d1863a7e0c0fd8687f601b570ea4df4fd6ddfe1a7e03c63a90bd30fb53c1ecb11fd57fdc92eb451d243be1d46c5135516d992c102a5011 WHIRLPOOL ab2d5e4fd1d769a0019296e65fff5b3323ed47067aaca9e1a6f59e3fd430bb91aa8517e46fdf7ea4e51b973cb35311d3f673b2e9dc7f948d8e8adbe40a8e8336
 AUX jinja-2.7-docs.patch 1945 SHA256 d3299aff0ed48f0b89a7ad07ba092b02696fb85692d30ec569d308e0925744f7 SHA512 5cfb134597eb3d39426a6e79d871d7381d776e9709b3a9f606c2d5772eacfb508105637e95fcab88fbf2705f3997d9d0f92bc85f92c790603c95ca1f096d013a WHIRLPOOL a27f652d0fea41df7e8b079950a1b7c928386dab954e5dab423906a4f97206573b72280c9073cacfd80f90c6ef112c9f1ffabeb45965f187daf4e288040f5eb7
 DIST Jinja2-2.6.tar.gz 389741 SHA256 a85e185375db75c109f99ecde3d55415f035e7068a82252cf4f16c667ac38f49 SHA512 6603bd6a7e4956433746da15b18b1206b67c901262337aab8352ddff154efca9eb6d652c244c63e8ffad492d204c724db3e86222ae371e75e3f5f2011244554e WHIRLPOOL d6d27867a6d4d9f82e956d5d116faae4adfb5f1fea4ecc067fec61d67eca0d16ee6dc80d8585f34a49a89a2da18c65395a4d615b5723241866ff27e3362f915f
 DIST Jinja2-2.7.1.tar.gz 377813 SHA256 5cc0a087a81dca1c08368482fb7a92fe2bdd8cfbb22bc0fccfe6c85affb04c8b SHA512 c5d4262f6dfec77c74496f0b3afd88a37fc0573133810cfdc29fadbd9d02bb7af10b2a3ddf3075f8b682629cd41a949dcbccb293b84b0aeff9090b0aa9669e02 WHIRLPOOL 73a78917adc5a455dda971fc2e1d9cc005ac3b1a95c2467950206a37a710d6481cc1a26b9e0105b6c5607acaf96af0bee90a3849836969ab70b316c3f0cda132
 DIST Jinja2-2.7.tar.gz 377603 SHA256 474f1518d189ae7e318b139fecc1d30b943f124448cfa0f09582ca23e069fa4d SHA512 44d0c18babcdb84160eeea077ec6dbd63bc4669ee81b0f5849bc42a9d9665b3e6647ce64ea2e15f04940807a67f25ebcf937da217318dea3d3dc1531800422b1 WHIRLPOOL 7978e27b8b97b832ef0ba910569678c8a931593a8fae16b247b8d8e7516f08b80e4086beca00e6890c9a4dd193d3fb87c49dd40ec9e738dbb4b018df6e762b8f
-EBUILD jinja-2.6-r1.ebuild 1831 SHA256 40f23603027cc79fa34d404c5bed4bd10ebfc57fc1bb17d605ee057f7a074c97 SHA512 504160298c6c5c90d96b29532704048a282d8dedd402f3d2d21a96e988da3063e779c963b4921bb99fc7dbdbe1004a328df4381018bc9a0195fba929b7a9a4c8 WHIRLPOOL ceec1abe03fe0ce2700f3a5306c46c78d6faff5bceb4d779448f44516b422ba05843cbfdbae8412babcb36a08633cd67c2097738160eafc45968bd21f09722b1
+EBUILD jinja-2.6-r1.ebuild 1830 SHA256 ee039acd8ab7543804d41e07b72e1eab0b6252c9932d0ee9b239b734bcb48d17 SHA512 615fbb8d5e893fac3a6a39f83cef3421e62e27b50d3ba344c0a22937869ab2f5c69db9a8eafd567cc8f7ff8201db08e0facb6f4fa08c4d07b47f3859e406d76e WHIRLPOOL fb4a5527953e666c9482f587a38eaa311cd9e8a4cb2bb8d46420e4be75ea877b14f6432fd3a83f88d51bf18bc6ffabc4042bc89eb689abb068c83c98824da6c4
 EBUILD jinja-2.6-r100.ebuild 1796 SHA256 c674d63babbf53700b1739dbcf41440bda5f1bb3071d89aecebcbf236673bfd0 SHA512 9a7996df2db53d06f91d5c5909c514f2abff041b202c3e151cf33e28a8f4c10573dfe9ebab73c9a7391a1dc31a0ec717df91b9a870824d7e91194f9a8bf12524 WHIRLPOOL c1891127e75ec5cbedfa6d657a78d922578ed119fcb7a92fc7104fb59aec256911e00324affc53bf9d60ed7e50608014bf43f61e820ca03b99e606b814c7c916
 EBUILD jinja-2.6-r2.ebuild 1894 SHA256 30e423e8d4cc103957d74be2fd21f544cffcf1b8a647ec0d7dfd50d54193d9d2 SHA512 b6ece75eee1b9f6424e8a53bbcd42d03c64252e540d6a5275283d8dc59941b6f53e09d4250f558d0329a252a1c28a15c71eb7e9f0eed8e09a622a2d7de3091ff WHIRLPOOL 58360533f339b58fc91790dbbf7bc412dbab38a001039bed2c2dc9e0f994e2e9dcdbd750f330c9bab0c0394313edcc681921230e52c175b03360a1fd37386eab
 EBUILD jinja-2.6.ebuild 1885 SHA256 ca7229d425db7195fdb936ce819b014664de41a9847face956612288e0e6a9e1 SHA512 88d8513f5132d5877704db80d320b3cf1210b56118d2bca034aa6cb4a5135fdd330cafc3439f357746c721af49d2368c095d6501e63ef14525fab0fc97034e6c WHIRLPOOL f5eb57b60bcc43905da22da49f58aaa6c4f6a23e00322281149d63588ef1d8430bad8b2364b510efa0cee760450d0855464a0a409d8e34b4e2657cb9a49b55c7
 EBUILD jinja-2.7.1.ebuild 1713 SHA256 a12dee575afa26d53c2962dff5645e4d9db0cc1179b4c4b9e1a7fb3bed0efe76 SHA512 8f13784e743f1b8a43214330dceee64ba400f310f76a879c8ee786f5e61df527ff6c7d704f8425b122d561f616d17318cfb051d36a505c4b73884abcce912e77 WHIRLPOOL 6f1687881f05bdd6b50a6e67541e6eaac421e274e11a10baa902d5e7ff992478d2881a889e0827e5336a36fada078d818f78fc9b3b92eccc3e12599d5b0361a5
 EBUILD jinja-2.7.ebuild 1707 SHA256 3b91d3c776e4da6081b4a38f9aece092f9e4d2b5746953d5903f289ecfe3099a SHA512 cd8896a5a3845af800fa37ed801046361e11c7923e291738ab524339976506975a435653f9092f1d2476aa44e0590da8c443777869e8145a9367d1c35c37a0e2 WHIRLPOOL 1412fa38f654df06d1fa6210d48374a827b2037fbfc6a93d8865aef490e5768b2df9f6aec057d0cafa2c4073b06c32e548e8f98987f2dad6a31597fec61a3afd
-MISC ChangeLog 14810 SHA256 89c017fe1f1d985cb39fdb45f7683b1ea0a262042da950568665bb3d98f996c4 SHA512 baeae472caa07c1e116e8e85df8eb799b34826133f9163b61baa731d8b5c9fcf523d4aa13640b8eb63f970d8e9e05b8d05b349a192730678285f1f73770c3fdf WHIRLPOOL 6e75e9983101fd6c94e0439b4056e6a4777f9c96454806e381462fa3147d4ff343d21b13c991fbd17cc928d671b0e2ccf2420f73f2a91464d301ce22a82d54a2
+MISC ChangeLog 14912 SHA256 b22df59261b156f707ff8d756a2ae19e4140476e389f93e649efcbe11644460f SHA512 7e300aa5ab3a72dfff945eb3d57d1019d92a34c1627794e29122f79bee61aaceea584791a38498e3f8fd22c2df8dfa5703847989dca1e0b79e5efd9c9abd8153 WHIRLPOOL 2bf8b259eac5f127654ad1eb94f90bf75fa7322cead59a9744359068a85199e21d08a5442cb37531d087c636cfbc2a16364ed352ee5926dc59ca314dd0685c4e
 MISC metadata.xml 260 SHA256 bda84a3528019ac7c58b2435d70ad4a5f5c5fa29f0f8643569b4710081c2e555 SHA512 ac8108e6022705d5954c6ea7e504f0fb9dfd618c22d126ea6d22d181f6784dbd504ed705dc995cbd6c444067d43f46acb1cda58481b1c5459e4f9df7f260a81b WHIRLPOOL f6d4bb49f06a00d8ecc5d2e28ebdb80dee4dca9a77ce5d1926b45386301a2c267c943c991375ffdcde1473a8e30073803512a9e2f091e318fe6401d039c4c696
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSBj9qAAoJELp701BxlEWffkQP/06vyGe0Kufz7YGsd654UAK9
-tdqcecNCwu31kdDOXzEAO4eMv0E3syFPt9eoguFvlqs5p3/WsVptwzMNZuA9Eyvo
-oIxFbrqx45Lagj5j8zaWBF6RvhSxn9TDsAvJ1n/cNVAZN52yRAmFVBChcnCDvLYW
-quGj3l7Mf5fImxwcEa6umFDZ88d+JO2BQJ5e0r502jMP7ZQtPmS8oXE2jdwjSgMw
-50J+XU7CbsafsJv+qCwOxX6Lqnn5Y0g3MKBN77H8d+hoE7D2mK8fEUl+iE8H6Bdj
-IWFMsbUy1GgTYQ4OtpR7yMdN9DRNk75/a9tpKmN5jz1LAGrV8Oe4HKNzQ5qUmnJt
-E5Y078i45ThIiWtxaJoo6/8Zv6i2mukjvOd18JRQnQRxciGVMvxmsRb2mLKsUJRs
-nEHTDcwbw0EHgSZhWH/pUJKeRrhqD4UakLHM2abZVIV91BbxDbpdinolJRrIP5Kc
-1SeyfhhEzVAoFZRgcNtlIJbnnE+boRsITluSnSEdUqPRzzmukZ1Nzi1z1abqgK9j
-qts01D7x5P2tjqwspO8VQXORGLBz4VJLemAXPeu4N9XcJCXCWgcakzeLNg4CHJUT
-7LqvwRBuz++vm5srvIXfGhRWAwEKJqVv1cdeYTFvDtXvMWmrD1g+BSqgPSV9L5UY
-MY3Mis0FEoM8oHWxjo8Q
-=aWfP
+iEYEAREIAAYFAlIM11YACgkQVWmRsqeSphPqlACeKiUoH7q8W7shTOfoXXFtWPpy
+q48AnjWbDCQDHk+rF2A69KRuCZZslKT8
+=CMFi
 -----END PGP SIGNATURE-----
