@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX sphinx-1.1.3-docutils-manpage.patch 1310 SHA256 97d29af271a833188245399912fb459c4182262138411f9f745821493507977f SHA512 340340215c5549aa3d59afbfacfef9e5b08a5d22700bd8d2391edd38960c5a5f4db95abe2c052f01fd4873852ce2dbe485f9a87f0f2fc8689fe8b3f1fa064521 WHIRLPOOL 9d50448b9c7fbd7cc95e4675df2f2be79b15c654d82f7f0740ff7ca3881e4227005eedc0ad7bd6a12548c71fefd06479a5cec1d255e089c0cb39fa9ae53257b9
 AUX sphinx-1.1.3-python3.patch 1793 SHA256 f21f0f4f8b1f83660344b7b8c1512f853d579eb2938e7f6b4305008252824f46 SHA512 c7970403bc8f6d329a5e9c5abf0ad0a7465f1249706f5ca7cffbc374c5214c14903b524c415df8bd14cb7c2f080a19c96ddbba77f7fc8ce0a699b36005fdbb36 WHIRLPOOL a7f69a5da9f258ac583a86046547362c1c3547187f4074eaec4b605b6a09ca9a070f4257a3cb6ae2cd2fbc3a33c4e893c313741625cee3f482b5b52dd8116466
@@ -7,25 +7,15 @@ DIST Sphinx-1.1.3.tar.gz 2632059 SHA256 34dc95b70a2b07a61b5d61034c34b05f82514aab
 DIST Sphinx-1.2_pre20130530.tar.xz 2427084 SHA256 87a556b349b255927d1991b0df2199015e2571cb3edd55b0de4120b99eb6bd72 SHA512 7bc9e8c8202d3827648d64cde32d17e33cf2f206ac89c7f3239d2731385cdfd59efa289f4d88dfb13c1b4d6701777564456e510a8c5805b341daaa899c309620 WHIRLPOOL 790e24be7ce378ce5cd4d34616981b759c405ac7bf4aaad29657b7464783d48c861a999dc52c1752f944889e925bb4e9eeaff68df9d63fe7f56a0dc35a80376f
 EBUILD sphinx-1.1.3-r3.ebuild 3573 SHA256 86c4b9339c1f8e8456e39b59686ef264f743d386c3888d2202584f1793b6ce96 SHA512 0d42c768d620e2e2b76b3b769bd5961748c7dac865fb3a596028675136fa6f9d99ffa73701221b090d1c985f55c125ab270f61c319207358292dd8d02cb4e1e4 WHIRLPOOL ad7694e9c9ca90d7725b46f24b2caf649d65c6878d5dabc6211d0d206497c5c179af60c8f239a050d4bf2bf3b42a730ef2658e6e4e6cc09e461cd176539f8a87
 EBUILD sphinx-1.1.3-r5.ebuild 2961 SHA256 e93bf8e6c6e57dc86f442d11c0bc9af37190e40e7186334fdd61e3e10a2f20e3 SHA512 ecf72879b6ccb38d446b6732bb796c66f1a72d13030ed7edb913ecd4eeb19c92c4846f85b4efd06f2559ab7902acbe4c704d0652d8866ecb9f72983bab255379 WHIRLPOOL 6a2b4e96d02bf2e0a173e1ccd9ed3221ea735a2c3af41413f6509ca0ab147e59653a60a4a0235a0ca43a75636b07617fbb1de4896a2c130a4d1bd841e96f1cec
-EBUILD sphinx-1.1.3-r6.ebuild 3152 SHA256 92e41935fe009d0f04a07d276fc5045a4e9ae8db5b63a20a6f3ba6e1617b246f SHA512 daeb917fc808cb4513ce9da39b1be9cda573d339931ec1b81061d0b7f98cd653575325b81d91259f3427ee8858fa3ed70820205066eea1e35b5770e7eb260e46 WHIRLPOOL 6a0c17e4a1538fa94032e7b2a06e63a396727fa27682f8938de3acc42764b95661db3583f67462de71eecb8c12926341d0fb4bb409144e52c393c463accbdb0d
+EBUILD sphinx-1.1.3-r6.ebuild 3151 SHA256 7686e6603b1c31fe5949abaafe15f9adcc07dd3a87302decbef07696136d7710 SHA512 e90020467d0bf782508f286e68fdb298c92491b2fce36f42402440841303957e2540be229f031788a1e9a5a7b8dc77a314243acb7c41f11f327261d873e9007b WHIRLPOOL b8f1c3503c030744e90882a76438cd5aace56ac75136bb252738fc4b81b2d9abd096185ca13bd75e1729b2d305df13764c7e2a789f9a260544777b2b6af2e08f
 EBUILD sphinx-1.1.3-r7.ebuild 3320 SHA256 068566393fa12bb8d3f02b570f45921f137ea955320f2ae8099f63c29b5b637b SHA512 eafbaf8c9fde23b243c3845c60da313a364ad9f05144f2bf4be05e3327157b6ff5b64a3f6ba61a3107f88888fca575d45a6e1832c6252a8b278055ef18e07997 WHIRLPOOL b9260ce034d45f6c1d3703061c9e0468afc860109fd66829285e85507c009f38314a61ca071befa097534e12bf37c703ad7c064cc78c7ab8272b3c7571698085
 EBUILD sphinx-1.2_pre20130530.ebuild 3257 SHA256 518dca59b7aedf44aa710816cb50c4453ab6b019611889bbb5f4865db1e4fb81 SHA512 c3b487fa501625c0f64d9b18d49816c902455d5d7cc1af667ed75a2545e60605005ba1def2ad96e253e8dfc501c2b140469c1213cb535d4681d4d0fa09f16fca WHIRLPOOL 50906b9f3176ea566eec16be1130559a0dc9b86c1df6bae6ce052d45755991c1ad5e4663d159dd3ee165d8333385997c33528ced81752771e90055d47fc22813
-MISC ChangeLog 17352 SHA256 d8ffad27632e7ece5ddcbfc42738eb2f95d503af415f232559cc038d72d80aa2 SHA512 224e8d26b575a51f6f2af535418434489d1dd00b3d61b93afc167cc376f559be529bf50676c132f2ec03b0c84954a7c68474d349c85508807787eafeab91672c WHIRLPOOL b02d6c1223b89cd450ffbbc95565d9ff0d3552f9bdf38472e758df0295bcaa265adfd9f63456db6f5bd3a0c779b95d535ee35bb43fe6d6d38e98ef1b28d72780
+MISC ChangeLog 17457 SHA256 47ae876a15ffe22bcb1a1e9b1b4454e08a3acdb1f2996a943bcb16c94e579234 SHA512 81abb7bf2c708a19aaa407aaf5583c4be9d5ee4825f3663422f2c77a2d3c346a7beb988b252e737c97c1893cd12e4d007858fc3b732098c288d00dae27db62b1 WHIRLPOOL 021cb37a88eb5d680c4f391f3b701cfdda8abfdf38379330ba46fecd4754a69edf7b05b2489bd74e8b69ec31f27f4759e44814bc0287b6eed3c64ab8bad680d7
 MISC metadata.xml 410 SHA256 ec32db3e710de4837b3b3f6077a1577fe318faf0b00976a972d4e269d7bd3367 SHA512 fd9b5eefde8b8f976e679f754281b4a5a07b62bba71820cde1b109ecc33c094ea08a6f904501b671bb309a6d23a1290a2e37e56f9b0902a3704a03ba4481b3dc WHIRLPOOL cae66b5efcefd9b3b8c61845fa1c77b38641eb16d63dfe888fb7eaeac713d6b4722727c2edf03330f1a4bb9144f4f4f26f886e3de509bbcd72b51acf94b46c95
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSBj9cAAoJELp701BxlEWfcCoP/AkU8WidMKsNI+NuhTlNBZIB
-5sADZiaBEm/hj8ROZo+5WfRViY6FUdRK60I2r32uqX6N+fbfsw/RLxDIoUwvSvuO
-o9gxHIvjJ4+GZeuDg320mtZBVy611xxbfB1Y9DHQvah+5zVoNSE2embTi6ssKvzT
-VaZdh/QQT9SjwX1JUEsGeGytxgHGL1kqXJg2bYPxzNLGrT57pXUbPs5vEn+lTCBn
-K38YfbMDmDRC2YQucdHPdTY4bw2uD7TA4XSbiEJOn9AmI6G3SWJw0wrcqpuLaiC+
-NNSD/FcnZ6wk/GGIEFA0okD2JWkKn9JnVuLQRHHYrGRR5o1OcJI8o+CO0KAYOEIN
-uywP/n+0JaIWNOLCRyrBg7Swb8sMQ/Kvc8WGMXP1M/zYAeuybZ2mweEhBi7HlsAF
-3LAVEWNRw1lCwtTc7coPu7iZ1/jd6DFOzgEVUxiqVMSvaLexOXckrzGpz32bQs2P
-NbgrOFpLOAFVLpSJUCSIWvGoXBMxs/oyumhFDY064Ii7tEQbydfn4HeruBdFH71A
-dWW76un6+t98fZX+xMM+xBQPOYXusrnoFZ5DgTQly2IinCDouk1h2h63eghrG5ox
-HRSEPQGnvTSk+asUqZetlnBvNnBIoA7fFw968E1CHJDw1J3N6Qa1eNPM8sk69m93
-8wNbdUI1vBwih0eDIASj
-=+uds
+iEYEAREIAAYFAlIM13UACgkQVWmRsqeSphMf0gCfZ7mHgbmc0ALwZpF+o5ZsuglL
+a5oAmwZJoj7i1J65I9hpsgW0EYIrUX+6
+=Uj0l
 -----END PGP SIGNATURE-----
