@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/sphinx
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx/ChangeLog,v 1.139 2013/08/10 13:29:01 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx/ChangeLog,v 1.140 2013/08/15 13:28:20 jer Exp $
+
+  15 Aug 2013; Jeroen Roovers <jer@gentoo.org> sphinx-1.1.3-r6.ebuild:
+  Stable for HPPA (bug #477970).
 
   10 Aug 2013; Agostino Sarubbo <ago@gentoo.org> sphinx-1.1.3-r6.ebuild:
   Stable for arm, wrt bug #477970
