@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/jinja
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/jinja/ChangeLog,v 1.80 2013/08/10 13:29:16 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/jinja/ChangeLog,v 1.81 2013/08/15 13:27:49 jer Exp $
+
+  15 Aug 2013; Jeroen Roovers <jer@gentoo.org> jinja-2.6-r1.ebuild:
+  Stable for HPPA (bug #477970).
 
   10 Aug 2013; Agostino Sarubbo <ago@gentoo.org> jinja-2.6-r1.ebuild:
   Stable for arm, wrt bug #477970
